--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "msw": "^0.49.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
     "zustand": "^4.4.1"
   },
