--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-toastify": "^9.1.3",
     "zustand": "^4.4.1"
   },
@@ -23,6 +24,7 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-infinite-scroller": "^1.2.3",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.5.1",
     "postcss": "^8.4.27",
