--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
+    "cookies-next": "^4.0.0",
     "framer-motion": "^10.15.1",
     "msw": "^0.49.0",
     "next": "latest",
