--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "cookies-next": "^4.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.15.1",
     "msw": "^0.49.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-datepicker": "^4.17.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.0.6",
     "@types/react-infinite-scroller": "^1.2.3",
     "autoprefixer": "^10.4.15",
