--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "cookies-next": "^4.0.0",
