--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "cookies-next": "^4.0.0",
@@ -25,6 +28,17 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-themes": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/manager-api": "^7.5.1",
+    "@storybook/nextjs": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.5.1",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-datepicker": "^4.15.0",
@@ -33,6 +47,7 @@
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.5.1",
     "postcss": "^8.4.27",
+    "storybook": "^7.5.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.7.4"
   },
