--- a/.github/workflows/storybook_git_pages.yml
+++ b/.github/workflows/storybook_git_pages.yml
@@ -6,6 +6,11 @@ on:
       - "stories/**"
       - ".storybook/**"
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
